Fixed issue where scrolling wouldn't be possible if content height was only slightly higher than the visible window height

--- a/resources/themes/bootstrap/style.css
+++ b/resources/themes/bootstrap/style.css
@@ -6,6 +6,10 @@ body {
     padding: 15px 0;
 }
 
+body.breadcrumb-fixed {
+    padding-top: 64px;
+}
+
 #pageTopLink {
     background: transparent url(images/arrow_up.png) no-repeat left center;
     display: inline-block;
@@ -17,7 +21,12 @@ body {
 /* -------------------------------------------------------------------------- */
 /* -----| BREADCRUMBS |------------------------------------------------------ */
 /* -------------------------------------------------------------------------- */
-.breadcrumb-fixed {
+
+.breadcrumb {
+    margin-bottom: 15px;
+}
+
+.breadcrumb-fixed .breadcrumb-wrapper {
     background-color:#fbfbfb;
     background-image:-moz-linear-gradient(top, #ffffff, #f5f5f5);
     background-image:-ms-linear-gradient(top, #ffffff, #f5f5f5);
@@ -217,6 +226,7 @@ i {
 .icon-word       { background-position: -140px -40px; }
 .icon-picture    { background-position: -160px -40px; }
 .icon-arrow-up   { background-position: -180px -40px; }
+
 
 /* -------------------------------------------------------------------------- */
 /* -----| MISCELLANEOUS |---------------------------------------------------- */
